Integrate product listing with backend